--- a/index.css
+++ b/index.css
@@ -24,6 +24,9 @@ html {
 * {
     box-sizing: border-box;
 }
+img {
+    box-sizing: content-box;
+}
 
 a {
     text-decoration: none;
@@ -82,6 +85,7 @@ p {
 
 .container {
     display: flex;
+    width: 100%;
     justify-content: center;
     align-items: center;
     padding: 20px 0;
@@ -159,7 +163,7 @@ how to shrink with resizing viewport?
     width: 65%;
     padding: 30px 80px;
     text-align: center;
-    background: white;
+    background: hsla(0, 0%, 100%, 0.98);
     border-radius: 20px;
     position: absolute;
     left: 50%;
@@ -253,7 +257,8 @@ img.icon {
 
 /* MOBILE
 */
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1100px) and (orientation: landscape),
+        screen and  (max-height:1100px) and (orientation: portrait) {
 
     .item,
     .container,
@@ -271,6 +276,7 @@ img.icon {
     }
     .img-flex {
         width: 45%;
+        height:unset;
     }
 
     main,
